test/shouldFail/vonJonas/invalid_identifier01.pas

program InvalidIdentifier01;

var 
  123invalid : integer;
begin
end.
